# biblioteca-app

./: package.json
.claude/commands/: corrigir.md
.github/workflows/: pages.yml  release.yml
src/: index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-windows/: Biblioteca.vbs  servidor.ps1
