[package]
name = "biblioteca-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "biblioteca_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Força toda a árvore de dependências a usar cookie 0.18.0.
# cookie 0.18.1 tem um bug: chama time::parse() com 1 argumento
# mas a versão atual do time exige 2. O patch substitui globalmente.
[patch.crates-io]
cookie = { git = "https://github.com/SergioBenitez/cookie-rs.git", tag = "0.18.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
