[package]
name = "biblioteca-app"
version = "0.4.7"
edition = "2021"

[lib]
name = "biblioteca_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# time 0.3.52 quebrou a API parse() usada por cookie (e outros crates).
# Pin em 0.3.51 — versão usada no último build bem-sucedido (v0.3.0).
time = "=0.3.51"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
